--- a/src/index.html
+++ b/src/index.html
@@ -43,22 +43,23 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div class="navbar-brand">
-            Data Visualization Capstone
-          </div>
+          <div class="navbar-brand">Data Visualization Capstone</div>
         </div>
         <div class="collapse navbar-collapse" collapse="menuCollapsed">
           <ul class="nav navbar-nav">
             <li ui-sref-active="active">
               <a href ui-sref="home">
-                <i class="fa fa-home"></i>
-                Home
+                <i class="fa fa-home"></i>Home
               </a>
             </li>
             <li ui-sref-active="active">
               <a href ui-sref="about">
-                <i class="fa fa-info-circle"></i>
-                What is it?
+                <i class="fa fa-info-circle"></i>About
+              </a>
+            </li>
+            <li ui-sref-active="active">
+              <a href ui-sref="map">
+                <i class="fa fa-map-marker"></i>Map
               </a>
             </li>
           </ul>
