--- a/src/index.html
+++ b/src/index.html
@@ -71,5 +71,6 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
   </body>
 </html>
