Get mapbox working within angular.js

--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,13 @@
         </div>
       </div>
     </footer>
+    <!-- Reference Javascript Libraries -->
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
     <script src="https://api.tiles.mapbox.com/mapbox.js/v1.6.3/mapbox.js"></script>
+
+    <!-- Reference External CSS -->
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.3/mapbox.css' rel='stylesheet' />
+
   </body>
 </html>
