--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,7 @@
       </div>
     </footer>
     <!-- Reference Javascript Libraries -->
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
     <script src="https://api.tiles.mapbox.com/mapbox.js/v1.6.3/mapbox.js"></script>
